--- a/planets/planets/Base.lproj/Main.storyboard
+++ b/planets/planets/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="dwU-oQ-wUc">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeScreen_shuttle2" translatesAutoresizingMaskIntoConstraints="NO" id="dwU-oQ-wUc">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vuh-gx-OCd">
@@ -50,6 +50,9 @@
                                                 <rect key="frame" x="9" y="12" width="46" height="30"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" image="magnifyingglass" catalog="system"/>
+                                                <connections>
+                                                    <action selector="searchPlanetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XF5-qQ-Efr"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.56308948150000004" green="0.0028314608069999999" blue="0.59977516959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -60,20 +63,52 @@
                                             <constraint firstAttribute="trailing" secondItem="yr8-91-fQz" secondAttribute="trailing" constant="10" id="cdu-di-CVj"/>
                                         </constraints>
                                     </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="- Filter Date -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wd-7V-L78">
+                                        <rect key="frame" x="108" y="233" width="138" height="21"/>
+                                        <fontDescription key="fontDescription" name="AgelastRegular" family="Agelast" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2021" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6gP-eS-hCS">
+                                        <rect key="frame" x="25" y="311" width="97" height="34"/>
+                                        <color key="backgroundColor" red="0.56308948150000004" green="0.0028314608069999999" blue="0.59977516959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7yQ-Qx-m9m">
+                                        <rect key="frame" x="232" y="311" width="97" height="34"/>
+                                        <color key="backgroundColor" red="0.56308948150000004" green="0.0028314608069999999" blue="0.59977516959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.50326518529999997" green="0.050007110610000002" blue="0.74506265859999998" alpha="0.51246789380000002" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="m5s-Pd-AWq" firstAttribute="top" secondItem="wD8-39-LdK" secondAttribute="bottom" constant="74" id="0X1-Xg-znO"/>
                                     <constraint firstItem="wD8-39-LdK" firstAttribute="leading" secondItem="Vuh-gx-OCd" secondAttribute="leading" constant="50" id="CFB-ft-nDt"/>
+                                    <constraint firstAttribute="bottom" secondItem="6gP-eS-hCS" secondAttribute="bottom" constant="133" id="IJ1-ZS-bmO"/>
+                                    <constraint firstItem="6gP-eS-hCS" firstAttribute="leading" secondItem="Vuh-gx-OCd" secondAttribute="leading" constant="25" id="Lcm-aP-gcH"/>
+                                    <constraint firstItem="6gP-eS-hCS" firstAttribute="top" secondItem="4wd-7V-L78" secondAttribute="bottom" constant="57" id="S7n-d1-LFK"/>
+                                    <constraint firstItem="4wd-7V-L78" firstAttribute="top" secondItem="m5s-Pd-AWq" secondAttribute="bottom" constant="62.5" id="T6v-vs-05G"/>
+                                    <constraint firstAttribute="trailing" secondItem="6gP-eS-hCS" secondAttribute="trailing" constant="232" id="U0o-6w-aTG"/>
                                     <constraint firstItem="m5s-Pd-AWq" firstAttribute="leading" secondItem="Vuh-gx-OCd" secondAttribute="leading" constant="25" id="UBF-uG-iWg"/>
                                     <constraint firstAttribute="trailing" secondItem="sIQ-Hf-pOd" secondAttribute="trailing" constant="25" id="W7Z-EF-OGY"/>
                                     <constraint firstItem="sIQ-Hf-pOd" firstAttribute="leading" secondItem="m5s-Pd-AWq" secondAttribute="trailing" constant="35" id="XFE-Sh-Cju"/>
+                                    <constraint firstItem="4wd-7V-L78" firstAttribute="leading" secondItem="Vuh-gx-OCd" secondAttribute="leadingMargin" constant="100" id="Xc7-U1-xVz"/>
                                     <constraint firstAttribute="trailing" secondItem="wD8-39-LdK" secondAttribute="trailing" constant="50" id="ZFR-Zh-hLY"/>
                                     <constraint firstAttribute="trailing" secondItem="m5s-Pd-AWq" secondAttribute="trailing" constant="125" id="aDu-FA-uNc"/>
+                                    <constraint firstItem="7yQ-Qx-m9m" firstAttribute="top" secondItem="4wd-7V-L78" secondAttribute="bottom" constant="57" id="bcO-JV-Orc"/>
+                                    <constraint firstAttribute="bottom" secondItem="7yQ-Qx-m9m" secondAttribute="bottom" constant="133" id="dHj-AZ-VLn"/>
+                                    <constraint firstAttribute="bottom" secondItem="4wd-7V-L78" secondAttribute="bottom" constant="224" id="dYm-By-qyu"/>
                                     <constraint firstItem="m5s-Pd-AWq" firstAttribute="width" secondItem="sIQ-Hf-pOd" secondAttribute="height" multiplier="204:53" id="gLe-YP-Oaq"/>
                                     <constraint firstItem="m5s-Pd-AWq" firstAttribute="height" secondItem="sIQ-Hf-pOd" secondAttribute="height" id="gVS-Ew-aBK"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="4wd-7V-L78" secondAttribute="trailing" constant="100" id="iUi-m1-WeY"/>
+                                    <constraint firstItem="7yQ-Qx-m9m" firstAttribute="leading" secondItem="Vuh-gx-OCd" secondAttribute="leading" constant="232" id="kSS-OY-98g"/>
                                     <constraint firstItem="sIQ-Hf-pOd" firstAttribute="top" secondItem="wD8-39-LdK" secondAttribute="bottom" constant="74" id="mpS-Th-4Qc"/>
                                     <constraint firstItem="sIQ-Hf-pOd" firstAttribute="bottom" secondItem="m5s-Pd-AWq" secondAttribute="bottom" id="nEm-7u-T0i"/>
+                                    <constraint firstAttribute="trailing" secondItem="7yQ-Qx-m9m" secondAttribute="trailing" constant="25" id="w2D-dr-BR4"/>
                                     <constraint firstItem="wD8-39-LdK" firstAttribute="top" secondItem="Vuh-gx-OCd" secondAttribute="top" constant="27" id="yrC-Ao-ZR9"/>
                                 </constraints>
                             </view>
@@ -92,17 +127,50 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="fromYearInput" destination="6gP-eS-hCS" id="Qne-vz-4rl"/>
                         <outlet property="searchButtonView" destination="sIQ-Hf-pOd" id="DKf-sG-zda"/>
                         <outlet property="searchView" destination="Vuh-gx-OCd" id="hEC-AE-8Te"/>
+                        <outlet property="toYearInput" destination="7yQ-Qx-m9m" id="b1i-3v-Jjt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="61.607142857142854"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="bxF-9b-2ow">
+            <objects>
+                <viewController storyboardIdentifier="gifPlayerWebView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6Ci-k7-cep" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RuQ-CC-g5U">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8C6-uj-khA">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="grR-ET-AjG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8C6-uj-khA" firstAttribute="top" secondItem="RuQ-CC-g5U" secondAttribute="top" id="3Pa-Z4-aqq"/>
+                            <constraint firstItem="8C6-uj-khA" firstAttribute="leading" secondItem="grR-ET-AjG" secondAttribute="leading" id="56E-lp-yd3"/>
+                            <constraint firstItem="grR-ET-AjG" firstAttribute="trailing" secondItem="8C6-uj-khA" secondAttribute="trailing" id="O4P-pF-TG6"/>
+                            <constraint firstAttribute="bottom" secondItem="8C6-uj-khA" secondAttribute="bottom" id="wh7-TP-Oi5"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WuH-Jg-Hiz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="875" y="62"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="homeScreen" width="428" height="926"/>
+        <image name="homeScreen_shuttle2" width="428" height="926"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
